# nix-config

./: .gitignore  .sops.yaml  AGENTS.md  Justfile  README.md  TODO.md  bootstrap.sh  config.yaml  docker_module.py  flake.nix  install.sh  justfile  locale_module.py  opencode.jsonc  pyproject.toml  root-setup.sh  setup.sh  source.py
.github/workflows/: cachix.yml
.sisyphus/: ralph-loop.local.md
arch-config/: config.yaml
arch-config/modules/: base.yaml
home/: .zshenv  .zshrc  default.nix  git.nix  secrets.nix  shell.nix  theme.nix
home/.config/: starship.toml
home/dev/: database.nix  default.nix  git.nix  languages.nix  neovim.nix  ssh.nix
home/shell/: default.nix  fish.nix  ghostty.nix  starship.nix  tmux.nix  tools.nix  zsh.nix
hosts/: wsl.yaml
hosts/bare/: default.nix
hosts/mac-mini/: default.nix
hosts/macbook/: default.nix
hosts/macbook-air/: default.nix
hosts/mihomo-gateway/: default.nix  disko.nix
hosts/wsl/: default.nix
lib/: compose.yaml  default.nix
modules/: base.nix  base.py  base.yaml  cli.py  dev-tools.yaml  dev.nix  dev.py  docker.nix  docker.py  locale.nix  shell.nix  wsl.py  zsh.py  zsh.yaml
modules/darwin/: default.nix
modules/gateway/: constants.nix  default.nix  mihomo.nix  tproxy.nix
modules/nixos/: base.nix  default.nix  docker.nix  locale.nix  secrets.nix
modules/shared/: default.nix  fonts.nix  nix.nix
modules/zsh/: module.yaml  packages.yaml
overlays/: default.nix
pkgs/: default.nix
scripts/: install.sh  root-setup.sh  set-default-shell.sh  wsl-init.sh
secrets/: secrets.yaml
system/etc/: pacman.conf
(+7 files in other folders)
